--- a/_config.yml
+++ b/_config.yml
@@ -14,17 +14,16 @@ author: Advait Risbud
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  
 
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/IMG_9158.JPG"
+avatar: "/assets/img/std_photo (2).jpeg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: false
@@ -43,8 +42,6 @@ social-network-links:
   facebook: advaitrisbud
   github: bolozubaankesari
   twitter: SupeRisbud
-  patreon: DeanAttali
-  youtube: c/daattali
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
