--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
+  Home: 
   
 
 # --- Logo --- #
@@ -92,14 +93,14 @@ feed_show_tags: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
+navbar-col: "#CB4335"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
+page-col: "#2432AD"
+text-col: "#FDFEFF "
+link-col: "#C3FF00"
+hover-col: "#C3FF00"
+footer-col: "#CB4335"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
